--- a/index.html
+++ b/index.html
@@ -3,78 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <title>FRECUENCIA 0//17</title>
-
-<style>
-body {
-  background-color: black;
-  color: #cfcfcf;
-  font-family: Courier New, monospace;
-  text-align: center;
-  margin-top: 80px;
-  overflow-x: hidden;
-}
-
-h1 {
-  color: darkred;
-  font-size: 60px;
-  letter-spacing: 10px;
-  animation: glitch 1s infinite;
-}
-
-@keyframes glitch {
-  0% { text-shadow: 4px 0 red; }
-  50% { text-shadow: -4px 0 blue; }
-  100% { text-shadow: 4px 0 red; }
-}
-
-a {
-  color: red;
-  font-size: 22px;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.static {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('static.gif');
-  opacity: 0.05;
-  pointer-events: none;
-}
-
-.small {
-  font-size: 12px;
-  color: gray;
-  margin-top: 40px;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<div class="static"></div>
+<div class="container">
 
 <h1>FRECUENCIA 0//17</h1>
 
 <p>Si estas leyendo esto, la senal ya fue recibida.</p>
 
-<br>
-
-<a href="transmision001.html">Acceder al Registro</a>
+<div class="menu">
+  <a href="transmisiones.html">Transmisiones</a>
+  <a href="registro.html">Registro</a>
+</div>
 
 <p class="small">
 VISITANTES DESDE 2009: 000017
 </p>
 
-<p style="color:#050505;">
-permanece activo
-</p>
+</div>
 
 </body>
 </html>
+
