--- a/transmision001.html
+++ b/transmision001.html
@@ -3,27 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Transmision 001</title>
-
-<style>
-body {
-  background-color: black;
-  color: #bfbfbf;
-  font-family: Courier New, monospace;
-  margin: 80px;
-}
-
-h2 {
-  color: darkred;
-}
-
-a {
-  color: red;
-  text-decoration: none;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+<div class="container">
 
 <h2>TRANSMISION 001</h2>
 <p>Codigo: 0//17-A</p>
@@ -31,32 +16,42 @@ a {
 <br>
 
 <p>
-Todo empezo con un audio que nadie envio.
-Aparecio a las 3:17 AM.
-No tenia nombre.
-No tenia numero.
-Solo el titulo: 0//17.
+Las muertes empezaron después de que ella apareció en el pupitre del fondo.
+  Nadie la presentó; simplemente estaba ahí, con un parche negro cubriéndole el ojo izquierdo.
+  La profesora pasaba lista sin nombrarla y aun así siempre contaba uno más. Cuando pregunté quién era, me dijeron que dejara de hablar sola.
+  El primer accidente ocurrió esa misma semana. Luego otro. Y otro. Siempre, justo antes del ruido, se escuchaba el leve arrastre de una silla al fondo del salón.
+  La regla se volvió clara sin que nadie la dijera: 
+  no mirar ese puesto, no señalarlo, no admitir que alguien se sienta allí.
 </p>
 
 <p>
-Cuando lo reproducian...
-no se escuchaba nada.
-Pero el contador seguia avanzando.
-17 segundos.
+En las fotos del curso empezó a verse una sombra inclinada sobre distintos hombros. 
+Buscando en un anuario antiguo encontré la misma aula, el mismo pupitre… el mismo parche negro.
+Abajo, una frase breve:
 </p>
 
 <p>
-Despues del segundo 12...
-alguien susurraba algo.
+“La calamidad termina cuando 
+reconocen al que no debería estar”.
 </p>
 
 <p>
 "Dejen de escucharlo."
 </p>
 
-<br>
+<p>
+El asiento del fondo estaba vacío. La profesora comenzó a pasar lista, 
+avanzó apellido por apellido… y cuando llegó al mío, hizo una pausa 
+y siguió como si "yo" no existiera.
+</p>
 
-<a href="index.html">Volver</a>
+<p>
+Realmente estoy aqui?
+</p>
+<br>
+<a href="transmisiones.html">Volver al archivo</a>
+
+</div>
 
 </body>
 </html>
