Update and rename transmisiones.html to transmision.html

--- a/transmision.html
+++ b/transmision.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Transmisiones</title>
+<title>Transmision</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
