--- a/transmisiones.html
+++ b/transmisiones.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Transmision</title>
+<title>Transmisiones</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
