--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>FRECUENCIA 0//17</title>
+<title>SIN REM1T3Nt3·</title>
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -10,9 +10,9 @@
 
 <div class="container">
 
-<h1>FRECUENCIA 0//17</h1>
+<h1>SIN REM1T3Nt3</h1>
 
-<p>Si estas leyendo esto, la senal ya fue recibida.</p>
+<p>Si estas leyendo esto, lo lamento. Ya caiste..</p>
 
 <div class="menu">
   <a href="transmisiones.html">Transmisiones</a>
@@ -20,7 +20,7 @@
 </div>
 
 <p class="small">
-VISITANTES DESDE 2009: 000017
+VISITANTES DESDE 2009: 000007
 </p>
 
 </div>
